EP-249 Fix loan name and arrow overlap in app

--- a/microservices/app/imports/client/components/SideNavUser/SideNavUser.scss
+++ b/microservices/app/imports/client/components/SideNavUser/SideNavUser.scss
@@ -28,6 +28,19 @@
   height: calc(100vh - 64px);
 }
 
+.side-nav-user [aria-haspopup='true'] {
+  padding-right: 18px;
+
+  [class*='MuiListItemText'] {
+    padding-right: 0;
+  }
+
+  span:first-child {
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
+
 .side-nav-user .link {
   display: flex;
   align-items: center;
